Updating timer functionality
Pause/start timer works with space or enter. Timer runs even when
computer is idle/sleeping.

Code refactored to have less global variables and be more modular.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <script type="text/javascript" src="timer.js"></script>
     <title>
-      Blargh!
+      Simple Timer
     </title>
   </head>
   <body>
