Adding checkboxes for audio alarms for timer

--- a/index.html
+++ b/index.html
@@ -9,5 +9,35 @@
     <span id="hours"></span>
     <span id="minutes"></span>
     <span id="seconds"></span>
+    <div>
+      <input type="checkbox" id="tenMinutes">
+        Ten minute audio cue
+      </input>
+    </div>
+    <div>
+      <input type="checkbox" id="fiveMinutes">
+        Five minute audio cue
+      </input>
+    </div>
+    <div>
+      <input type="checkbox" id="oneMinute">
+        One minute audio cue
+      </input>
+    </div>
+    <div>
+      <input type="checkbox" id="thirtySeconds">
+        Thirty second audio cue
+      </input>
+    </div>
+    <div>
+      <input type="checkbox" id="finalCountdown" checked="checked">
+        Ten second countdown
+      </input>
+    </div>
+    <div>
+      <input type="checkbox" id="allemande" checked="checked">
+        Timer expired alarm
+      </input>
+    </div>
   </body>
 </html>
