Implementing embedded youtube video as alarm

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <script type="text/javascript" src="youtube.js"></script>
     <script type="text/javascript" src="timer.js"></script>
     <title>
       Simple Timer
@@ -9,6 +10,8 @@
     <span id="hours"></span>
     <span id="minutes"></span>
     <span id="seconds"></span>
+    <div id="youtubeDIV">
+    </div>
     <div>
       <input type="checkbox" id="tenMinutes">
         Ten minute audio cue
