Fixing expiredTimer alarm bug.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
       </input>
     </div>
     <div>
-      <input type="checkbox" id="allemande" checked="checked">
+      <input type="checkbox" id="expiredTimer" checked="checked">
         Timer expired alarm
+      </input>
+    </div>
+    <div>
+      <input type="checkbox" id="repeat">
+        Restart timer on expiration
       </input>
     </div>
   </body>
